fixing text alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,9 +28,6 @@ body {
   border-radius: 1rem;
   color: #e8e8e8;
   text-align: right;
-  display: flex;
-  align-items: center;
-  justify-content: right;
   padding: 1.5rem;
 }
 
